Action Event triggered by list does not reflect the modifiers properly on win32

XMLWordPrintable

    • b116
    • x86
    • windows_xp

      I have a single selection list with few items. I am clicking an item and pressing ENTER with one of SHIFT / ALT / CTRL keys down. I expect the action event to return me these modifiers properly. But on Win32, the modifiers returned by the ActionEvent does not show any of these modifier keys.

      This is reproducible only on Win32 since 1.4.2. This works fine on Solaris / Linux with XToolkit as well as Motif.

      Run the attached test. You would see a frame with a list. Keep any of the above mentioned modifier keys down and press ENTER. Check the ActionEvent shown on the console. If it does not show the modifier key you have pressed, the bug is reproduced.
      ###@###.### 2004-11-05 12:42:58 GMT

            Assignee:
            Ambarish Rapte
            Reporter:
            Praveen Mohan (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:
              Imported:
              Indexed: