6191390: Action Event triggered by list does not reflect the modifiers properly on win32

Reviewed-by: serb, psadhukhan